--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -48,3 +48,43 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(=[\"\']\s*?\&{[\s\S]*?})[\s\S]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000005,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](link|style|meta)[^>＞]*[>＞][\s\S]*?)" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000006,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[^>＞]*?style\s*?=\s*?[^>＞]*?(:e(\/\*[^\/\*]*?\*\/)?x(\/\*[^\/\*]*?\*\/)?p(\/\*[^\/\*]*?\*\/)?r(\/\*[^\/\*]*?\*\/)?e(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?i(\/\*[^\/\*]*?\*\/)?o(\/\*[^\/\*]*?\*\/)?n)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000007,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(:expression)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000008,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
