--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -1,4 +1,4 @@
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]script[^>＞]*[>＞][\s\S]*?)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml)[^>＞]*[>＞][\s\S]*?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000000,\
 severity:'CRITICAL',\
@@ -78,9 +78,49 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(:expression)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(behavior:)[/s]*?[^>＞]*?(url\([^)]*?)(.htc)\)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000008,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(:([ ]|(\s))*?expression\([^>＞]*?\))[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000009,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[^>＞]*?(type[\s]*?=[\s]*?[\'\"]text\/x-scriptlet[\'\"])[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000010,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]eMBED[^>＞]*?(AllowScriptAccess[\s]*?=[\s]*?[\'\"]always[\'\"])[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000011,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[^>＞]*?(j(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?v(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?s(<!\--[^\->]*?-->)*?c(<!\--[^\->]*?-->)*?r(<!\--[^\->]*?-->)*?i(<!\--[^\->]*?-->)*?p(<!\--[^\->]*?-->)*?t:)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000012,\
 severity:'CRITICAL',\
 capture,\
 phase:request,\
