--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -18,7 +18,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][\s\S]*?j[\s]*?a[\s]*?v[\s]*?a[\s]*?s[\s]*?c[\s]*?r[\s]*?i[\s]*?p[\s]*?t:[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^<＜]*?j[\s]*?a[\s]*?v[\s]*?a[\s]*?s[\s]*?c[\s]*?r[\s]*?i[\s]*?p[\s]*?t:[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000002,\
 severity:'CRITICAL',\
@@ -131,6 +131,16 @@ logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]button[^>＞]*?(formaction[\s]*?=[\s]*?javascript)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000013,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]PARAM[^>＞]*?(VALUE[\s]*?=[\s]*?[\'\"][\s]?javascript:[^>＞]*?[\'\"])[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000014,\
 severity:'CRITICAL',\
 capture,\
 phase:request,\
