--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -1,4 +1,4 @@
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|object)[^>＞]*[>＞][\s\S]*?)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|object|form|if|handler|listener)[^>＞]*[>＞][\s\S]*?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000000,\
 severity:'CRITICAL',\
@@ -28,7 +28,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]iframe[^>＞]*?[>＞<＜])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([>＞]?[<＜]iframe[^>＞]*?[>＞<＜]?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000003,\
 severity:'CRITICAL',\
@@ -158,7 +158,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?data:(application|text/html)[^>＞]*?(base64)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?data:(image|application|text/html)[^>＞]*?(base64)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000016,\
 severity:'CRITICAL',\
@@ -181,6 +181,26 @@ logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(%253cscript%253e)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000018,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(label[ /][^>＞]*?(dataformatas)[^>＞]*?(datasrc)[^>＞]*?(datafld)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000019,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)((set|animate)[ /][^>＞]*?(attributeName)[^>＞]*?(begin)?[^>＞]*?(to)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000020,\
 severity:'CRITICAL',\
 capture,\
 phase:request,\
