--- a/rule/event-handle.conf
+++ b/rule/event-handle.conf
@@ -798,7 +798,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](audio|body|embed|image|image2|image3|img|img2|input|isindex|link|object|script|source|video)[ ,/])[\s\S]*?(onerror)[\s\S]*?[>＞]" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](audio|body|embed|image|image2|image3|li|img|img2|input|isindex|link|object|script|source|video)[ ,/])[\s\S]*?(onerror)[\s\S]*?[>＞]" \
 "msg:'NoScript XSS InjectionChecker: HTML Injection',\
 id:111111191,\
 severity:'CRITICAL',\
@@ -898,7 +898,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](image|image2|img|img2|input)[ ,/])[\s\S]*?(onloadstart)[\s\S]*?[>＞]" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](audio|video|image|image2|img|img2|input)[ ,/])[\s\S]*?(onloadstart)[\s\S]*?[>＞]" \
 "msg:'NoScript XSS InjectionChecker: HTML Injection',\
 id:111111201,\
 severity:'CRITICAL',\
