--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -98,7 +98,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[^>＞]*?(type[\s]*?=[\s]*?[\'\"]text\/x-scriptlet[\'\"])[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[ /][^>＞]*?(type[\s]*?=[\s]*?[\'\"]text\/x-scriptlet[\'\"])[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000010,\
 severity:'CRITICAL',\
@@ -108,7 +108,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]eMBED[^>＞]*?(AllowScriptAccess[\s]*?=[\s]*?[\'\"]?(always)[\'\"]?)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]eMBED[ /][^>＞]*?(AllowScriptAccess[\s]*?=[\s]*?[\'\"]?(always)[\'\"]?)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000011,\
 severity:'CRITICAL',\
@@ -118,7 +118,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[^>＞]*?(j(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?v(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?s(<!\--[^\->]*?-->)*?c(<!\--[^\->]*?-->)*?r(<!\--[^\->]*?-->)*?i(<!\--[^\->]*?-->)*?p(<!\--[^\->]*?-->)*?t:)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[ /][^>＞]*?(j(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?v(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?s(<!\--[^\->]*?-->)*?c(<!\--[^\->]*?-->)*?r(<!\--[^\->]*?-->)*?i(<!\--[^\->]*?-->)*?p(<!\--[^\->]*?-->)*?t:)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000012,\
 severity:'CRITICAL',\
@@ -148,7 +148,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]PARAM[^>＞]*?(VALUE[\s]*?=[\s]*?[\'\"][\s]?javascript:[^>＞]*?[\'\"])[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]PARAM[ /][^>＞]*?(VALUE[\s]*?=[\s]*?[\'\"][\s]?javascript:[^>＞]*?[\'\"])[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000015,\
 severity:'CRITICAL',\
