--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -1,4 +1,4 @@
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|object|form|if|handler|listener)[ /][^>＞]*[>＞][\s\S]*?)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|object|form|if|handler|listener)[ /]?[^>＞]*[>＞][\s\S]*?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000000,\
 severity:'CRITICAL',\
