--- a/rule/script-tag.conf
+++ b/rule/script-tag.conf
@@ -1,4 +1,4 @@
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|object|form|if|handler|listener)[ /]?[^>＞]*[>＞][\s\S]*?)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](script|xml|input|form|if|handler|listener)[ /][^>＞]*[>＞][\s\S]*?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000000,\
 severity:'CRITICAL',\
@@ -18,7 +18,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^<＜]*?j[\s]*?a[\s]*?v[\s]*?a[\s]*?s[\s]*?c[\s]*?r[\s]*?i[\s]*?p[\s]*?t:[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]script[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000002,\
 severity:'CRITICAL',\
@@ -28,7 +28,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([>＞]?[<＜]iframe[^>＞]*?(src[\s]*?=[\s]*?[\",\']javascript:)[^>＞]*?[>＞<＜])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[ /][^>＞]*?type=[\'\"](text/x-scriptlet)[\'\"][^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000003,\
 severity:'CRITICAL',\
@@ -38,7 +38,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?src=[\'\"](vbscript:|livescript:)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^<＜]*?j[\s]*?a[\s]*?v[\s]*?a[\s]*?s[\s]*?c[\s]*?r[\s]*?i[\s]*?p[\s]*?t:[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000004,\
 severity:'CRITICAL',\
@@ -48,7 +48,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(=[\"\']\s*?\&{[\s\S]*?})[\s\S]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([>＞]?[<＜]iframe[^>＞]*?(src[\s]*?=[\s]*?[\",\']javascript:)[^>＞]*?[>＞<＜])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000005,\
 severity:'CRITICAL',\
@@ -58,7 +58,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](link|style|meta)[^>＞]*[>＞][\s\S]*?)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?src=[\'\"](vbscript:|livescript:)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000006,\
 severity:'CRITICAL',\
@@ -68,7 +68,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[^>＞]*?style\s*?=\s*?[^>＞]*?(:e(\/\*[^\/\*]*?\*\/)?x(\/\*[^\/\*]*?\*\/)?p(\/\*[^\/\*]*?\*\/)?r(\/\*[^\/\*]*?\*\/)?e(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?i(\/\*[^\/\*]*?\*\/)?o(\/\*[^\/\*]*?\*\/)?n)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(=[\"\']\s*?\&{[\s\S]*?})[\s\S]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000007,\
 severity:'CRITICAL',\
@@ -78,7 +78,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(behavior:)[/s]*?[^>＞]*?(url\([^)]*?)(.htc)\)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜](link|style|meta)[^>＞]*[>＞][\s\S]*?)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000008,\
 severity:'CRITICAL',\
@@ -88,7 +88,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(:([ ]|(\s))*?expression\([^>＞]*?\))[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[ /][^>＞]*?style\s*?=\s*?[^>＞]*?(:e(\/\*[^\/\*]*?\*\/)?x(\/\*[^\/\*]*?\*\/)?p(\/\*[^\/\*]*?\*\/)?r(\/\*[^\/\*]*?\*\/)?e(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?s(\/\*[^\/\*]*?\*\/)?i(\/\*[^\/\*]*?\*\/)?o(\/\*[^\/\*]*?\*\/)?n)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000009,\
 severity:'CRITICAL',\
@@ -98,7 +98,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[ /][^>＞]*?(type[\s]*?=[\s]*?[\'\"]text\/x-scriptlet[\'\"])[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(behavior:)[/s]*?[^>＞]*?(url\([^)]*?)(.htc)\)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000010,\
 severity:'CRITICAL',\
@@ -108,7 +108,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]eMBED[ /][^>＞]*?(AllowScriptAccess[\s]*?=[\s]*?[\'\"]?(always)[\'\"]?)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?(:([ ]|(\s))*?expression\([^>＞]*?\))[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000011,\
 severity:'CRITICAL',\
@@ -118,7 +118,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[ /][^>＞]*?(j(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?v(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?s(<!\--[^\->]*?-->)*?c(<!\--[^\->]*?-->)*?r(<!\--[^\->]*?-->)*?i(<!\--[^\->]*?-->)*?p(<!\--[^\->]*?-->)*?t:)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]object[ /][^>＞]*?(type[\s]*?=[\s]*?[\'\"]text\/x-scriptlet[\'\"])[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000012,\
 severity:'CRITICAL',\
@@ -128,7 +128,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]button[ /][^>＞]*?(formaction[\s]*?=[\s]*?javascript)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]img[ /][^>＞]*?(j(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?v(<!\--[^\->]*?-->)*?a(<!\--[^\->]*?-->)*?s(<!\--[^\->]*?-->)*?c(<!\--[^\->]*?-->)*?r(<!\--[^\->]*?-->)*?i(<!\--[^\->]*?-->)*?p(<!\--[^\->]*?-->)*?t:)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000013,\
 severity:'CRITICAL',\
@@ -138,7 +138,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]isindex[ /][^>＞]*?(formaction[\s]*?=[\s]*?[\'\"]javascript)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]button[ /][^>＞]*?(formaction[\s]*?=[\s]*?javascript)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000014,\
 severity:'CRITICAL',\
@@ -148,7 +148,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]PARAM[ /][^>＞]*?(VALUE[\s]*?=[\s]*?[\'\"][\s]?javascript:[^>＞]*?[\'\"])[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]isindex[ /][^>＞]*?(formaction[\s]*?=[\s]*?[\'\"]javascript)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000015,\
 severity:'CRITICAL',\
@@ -158,7 +158,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?data:(image|application|text/html)[^>＞]*?(base64)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]PARAM[ /][^>＞]*?(VALUE[\s]*?=[\s]*?[\'\"][\s]?javascript:[^>＞]*?[\'\"])[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000016,\
 severity:'CRITICAL',\
@@ -168,7 +168,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]a[ /][^>＞]*?(=)[\'\"]?(javascript)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜][^>＞]*?data:(image|application|text/html)[^>＞]*?(base64)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000017,\
 severity:'CRITICAL',\
@@ -178,7 +178,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(%253cscript%253e)" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)([<＜]a[ /][^>＞]*?(=)[\'\"]?(javascript)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000018,\
 severity:'CRITICAL',\
@@ -188,7 +188,7 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(label[ /][^>＞]*?(dataformatas)[^>＞]*?(datasrc)[^>＞]*?(datafld)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(%253cscript%253e)" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000019,\
 severity:'CRITICAL',\
@@ -198,9 +198,19 @@ t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,
 tag:'attack-xss',\
 logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
 
-SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)((set|animate)[ /][^>＞]*?(attributeName)[^>＞]*?(begin)?[^>＞]*?(to)[^>＞]*?[>＞])" \
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)(label[ /][^>＞]*?(dataformatas)[^>＞]*?(datasrc)[^>＞]*?(datafld)[^>＞]*?[>＞])" \
 "msg:'XSS InjectionChecker: Script Tag Injection',\
 id:200000020,\
+severity:'CRITICAL',\
+capture,\
+phase:request,\
+t:none,t:utf8toUnicode,t:urlDecodeUni,t:htmlEntityDecode,t:jsDecode,t:cssDecode,t:removeNulls,\
+tag:'attack-xss',\
+logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}'
+
+SecRule REQUEST_COOKIES|!REQUEST_COOKIES:/__utm/|REQUEST_COOKIES_NAMES|REQUEST_HEADERS:User-Agent|REQUEST_HEADERS:Referer|ARGS_NAMES|ARGS|XML:/* "(?i)((set|animate)[ /][^>＞]*?(attributeName)[^>＞]*?(begin)?[^>＞]*?(to)[^>＞]*?[>＞])" \
+"msg:'XSS InjectionChecker: Script Tag Injection',\
+id:200000021,\
 severity:'CRITICAL',\
 capture,\
 phase:request,\
